# nostr-publish-file-metadata-action

./: .gitignore  pyproject.toml
nostr_publish/: __init__.py  __main__.py  blossom.py  constants.py  nostr_events.py  publisher.py  scanner.py
nostr_publish.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_nostr_publish.py
