[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nostr-publish"
version = "0.2.2"
description = "Publish artifacts to Blossom + Nostr (NIP-94 kind 1063 + kind 30078 summaries)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nostr", "blossom", "nip-94", "ci", "test-results", "artifacts"]
dependencies = ["certifi"]

[project.scripts]
nostr-publish = "nostr_publish.publisher:main"

[tool.setuptools.packages.find]
include = ["nostr_publish*"]
